...
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier
                    .semantics(mergeDescendants = true) {
                        contentDescription = if (isFav) "Favored" else "Not Favored"
                    }
                    .padding(spacingRegular),
                onClick = {
                    detailViewModel.apply {
                        language?.let { if (isFav) removeFromFavorite(it) else addedToFavorite(it) }
                    }
...
