package com.example.programminglanguagecompose.utils

object Const {
    const val repository = "Repository"
    const val navKeyId = "LanguageId"
    const val tagTestList = "LanguageList"
}